<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="X: Y: Z:"
        android:id="@+id/acceleration"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Acceleration"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:id="@+id/on_off_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="On"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Temperature"
        android:id="@+id/textView2"
        android:layout_below="@+id/acceleration"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Temp: "
        android:id="@+id/temperature"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/acceleration"
        android:layout_alignStart="@+id/acceleration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0.0"
        android:id="@+id/proximityTextView"

        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/temperature"
        android:layout_alignStart="@+id/temperature" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Proximity"
        android:id="@+id/textView3"
        android:layout_below="@+id/temperature"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Pressure: "
        android:id="@+id/pressure"
        android:layout_below="@+id/Pressure1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pressure"
        android:id="@+id/Pressure1"
        android:layout_below="@+id/proximityTextView"
        android:layout_centerHorizontal="true" />

    <!--<ToggleButton-->
        <!--android:id="@+id/on_off_button2"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="On"-->
        <!--android:layout_above="@+id/on_off_button3"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->

    <!--<ToggleButton-->
        <!--android:id="@+id/on_off_button3"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="On"-->
        <!--android:layout_alignTop="@+id/proximityTextView"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->

    <!--<ToggleButton-->
        <!--android:id="@+id/on_off_button4"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="On"-->
        <!--android:layout_alignTop="@+id/pressure"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sound level"
        android:id="@+id/sound_level"
        android:layout_below="@+id/pressure"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sound_level">

        <TextView
            android:id="@+id/dBTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/dBFractionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="dB"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:typeface="monospace" />

    </LinearLayout>
    <ToggleButton
        android:id="@+id/on_off_toggle_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="On"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/on_off_toggle_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/minus_5_db_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_5_db" />

        <Button
            android:id="@+id/minus_1_db_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_1_db" />

        <Button
            android:id="@+id/plus_1_db_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_1_db" />

        <Button
            android:id="@+id/plus_5_db_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_5_db" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/on_off_toggle_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/gain_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/gain_error_text" />

        <TextView
            android:id="@+id/gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.40"
            android:text="@string/gain" />
    </LinearLayout>
    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set"
        android:layout_above="@+id/linearLayout1"
        android:layout_toLeftOf="@+id/on_off_toggle_button"
        android:layout_toRightOf="@+id/Pressure1"
        android:layout_toEndOf="@+id/Pressure1" />

</RelativeLayout>
